fixed file uploading, and changed url authentications.